clang/test/BSC/Negative/Method/BuiltInType/int_conflict_param_type/int_conflict_param_type.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(int a); // expected-note {{previous declaration is here}}
void int::increase(int* this) { // expected-error {{conflicting types for 'increase'}}
    *this = *this +1;
}